--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.4",
+    "@react-three/drei": "^9.56.4",
+    "@react-three/fiber": "^8.10.1",
     "@shopify/react-web-worker": "^5.0.6",
     "@tabler/icons": "^1.68.0",
-    "next": "12.1.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^12.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "three": "^0.149.0",
+    "three-stdlib": "^2.21.6"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "@types/three": "^0.148.1",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6",
