--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
   "name": "lukasgreicius",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.6.4",
-    "@react-three/drei": "^9.56.4",
-    "@react-three/fiber": "^8.10.1",
-    "@shopify/react-web-worker": "^5.0.6",
-    "@tabler/icons": "^1.68.0",
-    "next": "^12.1.6",
+    "@next/font": "^13.4.2",
+    "@t3-oss/env-nextjs": "^0.2.1",
+    "clsx": "^1.2.1",
+    "next": "^13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "three": "^0.149.0",
-    "three-stdlib": "^2.21.6"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/node": "17.0.31",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.3",
-    "@types/three": "^0.148.1",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.6",
-    "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.6.2",
-    "typescript": "4.6.4"
+    "@types/eslint": "^8.21.3",
+    "@types/node": "^18.15.5",
+    "@types/prettier": "^2.7.2",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.36.0",
+    "eslint-config-next": "^13.4.1",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.6",
+    "prettier-plugin-tailwindcss": "^0.2.6",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.2"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.13.0"
   }
 }
