--- a/package.json
+++ b/package.json
@@ -8,30 +8,30 @@
     "start": "next start"
   },
   "dependencies": {
-    "@next/font": "^13.4.2",
+    "@next/font": "^13.4.13",
     "@t3-oss/env-nextjs": "^0.2.1",
-    "clsx": "^1.2.1",
-    "next": "^13.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "clsx": "^2.0.0",
+    "next": "^13.4.13",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.21.3",
-    "@types/node": "^18.15.5",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@types/eslint": "^8.44.2",
+    "@types/node": "^20.4.9",
+    "@types/prettier": "^3.0.0",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.36.0",
-    "eslint-config-next": "^13.4.1",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.6",
-    "prettier-plugin-tailwindcss": "^0.2.6",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.2"
+    "eslint": "^8.46.0",
+    "eslint-config-next": "^13.4.13",
+    "postcss": "^8.4.27",
+    "prettier": "^3.0.1",
+    "prettier-plugin-tailwindcss": "^0.5.1",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   },
   "ct3aMetadata": {
     "initVersion": "7.13.0"
