--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@mdx-js/react": "^2.3.0",
     "@next/font": "^13.4.13",
     "@next/mdx": "^13.4.13",
+    "@react-three/drei": "^9.80.5",
+    "@react-three/fiber": "^8.13.7",
+    "@react-three/postprocessing": "^2.15.0",
     "@t3-oss/env-nextjs": "^0.2.1",
     "clsx": "^2.0.0",
     "framer-motion": "^10.15.1",
+    "leva": "^0.9.35",
     "next": "^13.4.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
+    "three": "^0.155.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
@@ -30,6 +35,7 @@
     "@types/prettier": "^3.0.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/three": "^0.155.1",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.14",
