--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/fiber": "^8.13.7",
     "@react-three/postprocessing": "^2.15.0",
     "@t3-oss/env-nextjs": "^0.2.1",
+    "@vercel/analytics": "^1.0.2",
     "clsx": "^2.0.0",
     "framer-motion": "^10.15.1",
     "leva": "^0.9.35",
