--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "leva": "^0.9.35",
     "next": "^13.4.13",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
     "three": "^0.155.0",
+    "vaul": "^0.7.7",
     "zod": "^3.21.4"
   },
   "devDependencies": {
