fix: mobile, structure rework

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lukasgreicius",
   "version": "0.1.0",
+  "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev",
