--- a/package.json
+++ b/package.json
@@ -9,46 +9,42 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "@mdx-js/loader": "^3.0.0",
-    "@mdx-js/react": "^3.0.0",
-    "@next/font": "^14.0.2",
-    "@next/mdx": "^14.0.2",
+    "@headlessui/react": "^2.1.8",
+    "@heroicons/react": "^2.1.5",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.13",
     "@react-three/drei": "^9.88.14",
     "@react-three/fiber": "^8.15.11",
     "@react-three/postprocessing": "^2.15.11",
-    "@t3-oss/env-nextjs": "^0.7.1",
-    "@vercel/analytics": "^1.1.1",
-    "clsx": "^2.0.0",
-    "framer-motion": "^10.16.5",
+    "@vercel/analytics": "^1.3.1",
+    "framer-motion": "^11.9.0",
     "leva": "^0.9.35",
-    "next": "^14.0.2",
-    "react": "^18.2.0",
-    "react-device-detect": "^2.2.3",
-    "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.0.0",
+    "next": "^14.2.13",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.2",
     "three": "^0.158.0",
-    "vaul": "^0.7.9",
-    "zod": "^3.22.4"
+    "vaul": "^1.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/eslint": "^8.44.7",
-    "@types/node": "^20.9.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@types/three": "^0.158.2",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
-    "eslint-config-next": "^14.0.2",
-    "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2"
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.169.0",
+    "@typescript-eslint/eslint-plugin": "8.4.0",
+    "@typescript-eslint/parser": "8.4.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "8.57.0",
+    "eslint-config-next": "^14.2.13",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.13.0"
